fix Users in channel overflow

--- a/src/components/Channel/channels.scss
+++ b/src/components/Channel/channels.scss
@@ -30,7 +30,8 @@
   flex-direction: column;
   color: v.$base-color-light;
   background-color: v.$base-color-darkest;
-
+  overflow-y: auto;
+  scroll-behavior: smooth;
 
   &__header {
     // position: absolute;
@@ -77,11 +78,11 @@
 
   &__links {
     display: flex;
+    height: fit-content;
     flex-direction: column;
     // height: 100%;
     padding-top: 20px;
-    overflow-y: auto;
-    scroll-behavior: smooth;
+
 
     &__link {
       padding: 8px;
