--- a/src/components/Message/message.scss
+++ b/src/components/Message/message.scss
@@ -29,7 +29,7 @@
 
   &__nickname,
   &__time {
-    color: v.$base-color-blue;
+    color: v.$base-color-lightblue;
     font-size: 1em;
     font-weight: bold;
     padding: 0 10px;
