--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,6 +7,7 @@ $base-color-light: #eaeef1;
 $base-color-orange: #eda247;
 $base-color-red: #c01515;
 $base-color-blue: rgb(10, 75, 172);
+$base-color-lightblue: rgb(34, 107, 218);
 $base-color-green: #12af41;
 $base-color-ivory: #feefc5;
 $color-message-me: rgb(196, 217, 248);
